workload-components/01-pod.yml
apiVersion: v1
kind: Pod 
metadata:
  name: pod-1
  labels:                     # Optional Labels
    app: myapp1
    version: 1.1.2
spec:
  containers:
  - name: web
    image: mahendrshinde/myweb:1
    resources:
      requests:
        cpu: 100m           # CPU Time-slice 100 ==> 100 MS of 1 CPU
        ## Dedicate ENTIRE CPU to Container
        # cpu: 1000m
        # cpu: 1
        ## Dedicate HALF of CPU to container
        # cpu: 500m
        # cpu: 0.5
        memory: 32Mi        # Kubernetes DO NOT USE Mb, Kb, Gb
      limits:
        cpu: 500m
        memory: 64Mi
    ports:
    - containerPort: 80
