workload-components/02-config-map.yml

apiVersion: v1
kind: Pod
metadata: 
  name: pod-2
spec:
  containers:
  - name: db
    image: mysql:8.0
    resources:  
      limits: 
        cpu: 500m
        memory: 512Mi
