workload-components/03-secret-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-3
spec:
  imagePullSecrets:
  ## Container Registry Secret
  - name: reg-secret
  containers:
    - name: test
      image: mahendrashinde.azurecr.io/library-api-az-insights:latest
      resources:
        requests:
          cpu: 200m
          memory: 128Mi
      ports:
        - containerPort: 8080
