workload-components/04-volume-pod-1.yml
apiVersion: v1
kind: Pod
metadata:
  name: vol-pod1
  
spec:
  volumes:
    - name: logvolume
      emptyDir:
        sizeLimit: 100Mi

  containers:
  - name: myapp
    image: nginx:1.13.0
    volumeMounts:
      - mountPath: /var/logs/nginx
        name: logvolume
    resources:
      limits:
        memory: "32Mi"
        cpu: "50m"
    ports:
      - containerPort: 80
