workload-components/08-deploy1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  replicas: 2
  # Remember last 5 Versions (ReplicaSet)
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: myapp
        image: mahendrshinde/myweb:1
        resources:
          limits:
            memory: "32Mi"
            cpu: "50m"
        ports:
        - containerPort: 80
