workload-components/08-deploy2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
spec:
  replicas: 2
  # Remember last 5 Versions (ReplicaSet)
  revisionHistoryLimit: 5
  strategy:
    rollingUpdate:
      maxSurge: 1       ## Temp Scale UP by 1 Instance ## replicas would be 3
      maxUnavailable: 2 ## Take TWO pods down each time ! / Default is 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: myapp
        image: mahendrshinde/myweb:1
        resources:
          limits:
            memory: "32Mi"
            cpu: "50m"
        ports:
        - containerPort: 80
