workload-components/09-service-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: my-app
spec:
  selector:
    app: app2
  type: ClusterIP
  ports:  
  - targetPort: 80
    port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app2  
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: web
        image: mahendrshinde/myweb:1
        readinessProbe:
          httpGet:
            path: /
            scheme: HTTP
            port: 80
          failureThreshold: 3
          periodSeconds: 30
          timeoutSeconds: 10
        resources:
          limits:
            memory: "32Mi"
            cpu: "50m"
        ports:
        - containerPort: 80
