workload-components/09-service-node-port.yml
apiVersion: v1
kind: Service
metadata:
  name: my-app
spec:
  selector:
    app: app3
  type: NodePort
  ports:  
  - targetPort: 80
    port: 80
    nodePort: 30001   ## Node Port used by kube-proxy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
      - name: web
        image: mahendrshinde/myweb:1
        readinessProbe:
          httpGet:
            path: /
            scheme: HTTP
            port: 80
          failureThreshold: 3
          periodSeconds: 30
          timeoutSeconds: 10
        resources:
          limits:
            memory: "32Mi"
            cpu: "50m"
        ports:
        - containerPort: 80
