workload-components/11-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: app4
spec:
  selector:
    matchLabels:
      app: app4
  serviceName: app4-headless
  replicas: 2
  template:
    metadata:
      labels:
        app: app4
    spec:
      containers:
      - name: myapp
        image: mahendrshinde/http-session-java:4
        ports:
        - containerPort: 8080
          name: web
        volumeMounts:
        - name: www
          mountPath: /usr/local/tomcat/temp
  volumeClaimTemplates:
  - metadata:
      name: www
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 200Mi
---
apiVersion:  v1
kind: Service
metadata: 
  name: app4-headless
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 8080
