workload-components/13-ingress-route.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo1
  labels:
    name: demo1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/app3(.*)"
        backend:
          service:
            name: webapp3-svc
            port: 
              number: 80
      - pathType: Prefix
        path: "/app2(.*)"
        backend:
          service:
            name: webapp2-svc
            port: 
              number: 80
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: webapp1-svc
            port: 
              number: 80
